# kk-browser

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yaml
src/: App.tsx  DbNotFound.tsx  Home.tsx  main.tsx  utils.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: category.rs  category_node.rs  lib.rs  main.rs  paginated_result.rs  preset.rs  product.rs
